Added css file & added time function in getTheTone

--- a/projekt.html
+++ b/projekt.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
 	<head>
+		<title>Kul med mikrofon!</title>
+		<link href="style.css" rel="stylesheet" type="text/css"/>
 		<script type="jquery-2.1.1.js"></script>
 		<script language="javascript" type="text/javascript" src="
 			http://code.createjs.com/createjs-2013.12.12.min.js" ></script> 
 
 		<script type="text/javascript"></script> 
 
-		<title>Kul med mikrofon!</title>
 
 	</head>
 
@@ -20,7 +21,8 @@
 
 		 </div> 
 
-		<p id="demo"></p>
+		<p id="demo"></p> <!-- for oscillator -->
+		<h5 id="theTimer" ></h1> <!-- for countDown -->
 
 		<button onclick="toDo()">Ny ton</button>
 		
