--- a/projekt.html
+++ b/projekt.html
@@ -15,6 +15,11 @@
 	<body>
 	 	<div id="wrapper">
 
+	 		<div class="theMenu">
+	 			 <h1> Get The Note! </h1>
+	 			 <!-- <button class="menuBtn" onclick="toDo()">STARTA SPELET</button> -->
+	 		</div>
+
 			<!-- //Frekvensen -->
 			
 			<p id="pitch">Hz</p>
@@ -23,8 +28,6 @@
 
 		<p id="demo"></p> <!-- for oscillator -->
 		<h5 id="theTimer" ></h1> <!-- for countDown -->
-
-		<button onclick="toDo()">Ny ton</button>
 		
 		<script src="getTheTone.js"></script> 
 
