lagt ihop lite saker

--- a/projekt.html
+++ b/projekt.html
@@ -25,9 +25,10 @@
 			<p id="pitch">Hz</p>
 
 		 </div> 
-
+		<button class = "myButton", onclick="toDo()">Ny ton</button>
 		<p id="demo"></p> <!-- for oscillator -->
 		<h5 id="theTimer" ></h1> <!-- for countDown -->
+		<p id="points"></p>
 		
 		<script src="getTheTone.js"></script> 
 
