--- a/projekt.html
+++ b/projekt.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Kul med mikrofon!</title>
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
 		<script type="jquery-2.1.1.js"></script>
 		<script language="javascript" type="text/javascript" src="
