Börjat med the line

--- a/projekt.html
+++ b/projekt.html
@@ -5,6 +5,7 @@
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 		<link href="style.css" rel="stylesheet" type="text/css"/>
 		<script type="jquery-2.1.1.js"></script>
+		<script src="two.min.js"></script>
 		<script language="javascript" type="text/javascript" src="
 			http://code.createjs.com/createjs-2013.12.12.min.js" ></script> 
 
@@ -20,7 +21,10 @@
 	 			 <h1> Get The Note! </h1>
 	 			 <p class ="menuText" > Försök ta så många toner du kan. Du har 10 sekunder på dig per ton! TAGGA! </p>
 	 			 <button class = "startBtn", onclick="toDo()">Ny ton</button>
+
 	 		</div>
+
+	 		<div id = "draw-element" ></div>
 
 			<!-- //Frekvensen -->
 			
