--- a/projekt.html
+++ b/projekt.html
@@ -10,7 +10,7 @@
 			http://code.createjs.com/createjs-2013.12.12.min.js" ></script> 
 
 		<script type="text/javascript"></script> 
-
+		<meta charset="utf-8" />
 
 	</head>
 
@@ -20,11 +20,14 @@
 	 		<div class="theMenu" id="menu" style="visibility:visible" >
 	 			 <h1> Get The Note! </h1>
 	 			 <p class ="menuText" > Försök ta så många toner du kan. Du har 10 sekunder på dig per ton! TAGGA! </p>
-	 			 <button class = "startBtn", onclick="toDo()">Ny ton</button>
-
+	 			 <button class = "startBtn", onclick="toDo()">Starta spelet</button>
 	 		</div>
-
-	 		<div id = "draw-element" ></div>
+			
+			<div class="spelSlut" id="menu2" style="visibility:hidden" >
+	 			 <h1> Get The Note! </h1>
+	 			 <p class ="menuText", id = "score" >  </p>
+	 			 <button class = "startBtn", onclick="toDo()">Starta spelet</button>
+	 		</div>
 
 			<!-- //Frekvensen -->
 			
