--- a/projekt.html
+++ b/projekt.html
@@ -31,14 +31,23 @@
 
 			<!-- //Frekvensen -->
 			
-			<p id="pitch">Hz</p>
+			
 
 		 </div> 
-		<p id="demo"></p> <!-- for oscillator -->
-		<h5 id="theTimer" ></h1> <!-- for countDown -->
-		<p id="points"></p>
+		
+		<div id="man" style="visibility:hidden"></div>
+		<script src="./two.min.js"></script>
+		<!--<script src="./main.js"></script>-->
+		 
+		<p id="de"></p>
+		<h5 id="theTimer" ></h5> <!-- for countDown -->
+		
 		
 		<script src="getTheTone.js"></script> 
+		<h4 id="points"></h4>
+		<p id="pitch"></p>
+		
+		<p id="demo"></p> <!-- for oscillator -->
 
 	</body>
 </html>
