--- a/projekt.html
+++ b/projekt.html
@@ -38,6 +38,8 @@
 		<div id="man" style="visibility:hidden"></div>
 		<script src="./two.min.js"></script>
 		<!--<script src="./main.js"></script>-->
+		<div id="manCirkel"></div>
+		<script src="./two.min.js"></script>
 		 
 		<p id="de"></p>
 		<h5 id="theTimer" ></h5> <!-- for countDown -->
