--- a/projekt.html
+++ b/projekt.html
@@ -41,15 +41,15 @@
 		<div id="manCirkel"></div>
 		<script src="./two.min.js"></script>
 		 
-		<p id="de"></p>
+		<h6 id="de"></h6>
 		<h5 id="theTimer" ></h5> <!-- for countDown -->
 		
 		
 		<script src="getTheTone.js"></script> 
-		<h4 id="points"></h4>
-		<p id="pitch"></p>
+		<h2 id="points"></h2>
+		<h6 id="pitch"></h6>
 		
-		<p id="demo"></p> <!-- for oscillator -->
+		<h6 id="demo"></h6> <!-- for oscillator -->
 
 	</body>
 </html>
